--- a/index.html
+++ b/index.html
@@ -236,14 +236,14 @@
 							<input type=file name=upload>
 						</div>
 						<select id=size>
-							<option >Выберите размер картины</option>
+							<option value="">Выберите размер картины</option>
 							<option value="1000">40x50</option>
 							<option value="2000">50x70</option>
 							<option value="3000">70x70</option>
 							<option value="3000">70x100</option>
 						</select>
 						<select id=material>
-							<option >Выберите материал картины</option>
+							<option value="">Выберите материал картины</option>
 							<option value="1000"  title="Изящный, позволяет легко создавать текстуру, подходит для декоративных картин маслом.">Холст из волокна</option>
 							<option  value="2000" title="Достаточно грубый и создает ощущение реальности, подходит для классических пейзажей, натюрмортов и портретов.">Льняной холст</option>
 							<option value="3000" title="Изящный, подходит для всех типов реалистичных портретов.">Холст из натурального хлопка</option>
@@ -589,7 +589,7 @@
 		</div>
 	</section>
 	<div class="modals">
-	
+
 	<section class=consultation>
 		<div class=container>
 			<p class=p-heading>Остались вопросы?</p>
