--- a/index.html
+++ b/index.html
@@ -367,26 +367,28 @@
 			<div class="col-md-10 col-md-offset-1 col-xs-12 col-xs-offset-0">
 				<div class=sizes-wrapper>
 					<div class=sizes-block>
-						<img class=size-1 src=img/sizes-1.png alt>
-						<div class="size-hide"><p class=size>40x50</p>
+						<img class="size-1 image" src=img/sizes-1.png alt>
+						<div class="size-hide">
+						<p class=size>40x50</p>
 						<p class=starting-price>5 290 руб.</p>
-						<p class=final-price>3 670 руб.</p></div>
+						<p class=final-price>3 670 руб.</p>
+					</div>
 					</div>
 					<div class=sizes-block>
-						<img class=size-2 src=img/sizes-2.png alt>
+						<img class="size-2 image"src=img/sizes-2.png alt>
 						<div class="size-hide"><p class=size>50x70</p>
 						<p class=starting-price>5 290 руб.</p>
 						<p class=final-price>3 670 руб.</p></div>
 					</div>
 					<div class=sizes-block>
-						<img class=size-3 src=img/sizes-3.png alt>
+						<img class="size-3 image" src=img/sizes-3.png alt>
 						<div class="size-hide"><p class=size>70x70</p>
 						<p class=starting-price>5 290 руб.</p>
 						<p class=final-price>3 670 руб.</p></div>
 						<p class=sizes-hit>Хит продаж</p>
 					</div>
 					<div class=sizes-block>
-						<img class=size-4 src=img/sizes-4.png alt>
+						<img class="size-4 image" src=img/sizes-4.png alt>
 						<div class="size-hide"><p class=size>70x100</p>
 						<p class=starting-price>5 290 руб.</p>
 						<p class=final-price>3 670 руб.</p></div>
