--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 					</div>
 					</div>
 					<div class=sizes-block>
-						<img class="size-2 image"src=img/sizes-2.png alt>
+						<img class="size-2 image" src=img/sizes-2.png alt>
 						<div class="size-hide"><p class=size>50x70</p>
 						<p class=starting-price>5 290 руб.</p>
 						<p class=final-price>3 670 руб.</p></div>
@@ -690,7 +690,7 @@
 		<div class=popup-dialog>
 			<div class="popup-content msg">
 				<button class=popup-close>&times;</button>
-				<form class="1 form form-other" action= method=POST enctype=multipart/form-data>
+				<form class="1 form form-other" action=# method=POST enctype=multipart/form-data>
 					<h4>Заказать дизайн портрета</h4>
 					<div class=file_uploa>
 						<button type=button>Загрузить фотографию</button>
@@ -715,6 +715,6 @@
 	<link rel=stylesheet href=css/bootstrap.css>
 	<link rel="stylesheet" type="text/css" href="css/animate.css">
 	<link rel=stylesheet href=css/main.css>
-	<script src="js/bundle/bundle.js"></script>
+	<script src="js/dist/bundle.js"></script>
 </body>
 </html>
